html de segunda a quarta

--- a/secao13/exercicios/listaAninhada.html
+++ b/secao13/exercicios/listaAninhada.html
@@ -34,7 +34,7 @@
         </ul>
     </li>
 </ul>
-
+<a href='index.html'>voltar</a>
 <link rel="stylesheet" href="http://files.cod3r.com.br/curso-web/tree.css">
 <script>
     document.querySelectorAll('[expandir]').forEach(folder => {
