--- a/secao13/exercicios/texto1.html
+++ b/secao13/exercicios/texto1.html
@@ -27,3 +27,5 @@
 
 <!--Espaços em Brancos-->
 <p> espaços               em      brancos   n a o     sao          contemplados</p>
+<br> 
+<a href='index.html'>voltar</a>
