--- a/secao13/index.html
+++ b/secao13/index.html
@@ -22,6 +22,10 @@
             <a href='exercicios/lista.html'>Lista </a>
             <br>
             <a href='exercicios/listaAninhada.html'>Lista Aninhada </a>
+            <br>
+            <a href='exercicios/links1.html'>Links 1 </a>
+            <br>
+            <a href='exercicios/tabela.html'>Tabela </a>
         </nav>
         <section id='conteudo'> </section>
     </header>
