--- a/secao13/index.html
+++ b/secao13/index.html
@@ -28,6 +28,10 @@
             <br>
             <a href='exercicios/form/form.html'>Formulário </a>
             <br>
+            <a href='exercicios/imagens.html'>imagens </a>
+            <br>
+            <a href='exercicios/DesafioSlide.html'>Desafio Slide </a>
+            <br>
         </nav>
         <section id='conteudo'> </section>
     </header>
