Desafio slides com imagens concluido

--- a/secao13/index.html
+++ b/secao13/index.html
@@ -32,6 +32,8 @@
             <br>
             <a href='exercicios/DesafioSlide.html'>Desafio Slide </a>
             <br>
+            <a href='exercicios/videos/videos.html'>videos </a>
+            <br>
         </nav>
         <section id='conteudo'> </section>
     </header>
