--- a/secao13/index.html
+++ b/secao13/index.html
@@ -34,6 +34,8 @@
             <br>
             <a href='exercicios/videos/videos.html'>videos </a>
             <br>
+            <a href='exercicios/videos/DesafioVideo.html'>Desafio de videos </a>
+            <br>
         </nav>
         <section id='conteudo'> </section>
     </header>
