--- a/secao13/index.html
+++ b/secao13/index.html
@@ -10,7 +10,10 @@
             padding:30px 0px ;
         }
         nav{
-            display: block;
+            display: flex;
+        }
+        nav > a {
+            margin-right: 20px;
         }
     </style>
 </head>
@@ -36,6 +39,7 @@
             <br>
             <a href='exercicios/videos/DesafioVideo.html'>Desafio de videos </a>
             <br>
+            <a href='exercicios/TagNaoVisuais.html'>Tags não visuais </a>
         </nav>
         <section id='conteudo'> </section>
     </header>
