--- a/secao14/css/display.html
+++ b/secao14/css/display.html
@@ -5,7 +5,31 @@
     <meta charset="UTF-8">
     <title>Display</title>
     <style>
-        /* ... */
+        body{
+            font-size: 40px;
+            color: #fff;
+            background-color: cornflowerblue;
+        }
+
+        ul{padding: 0;}
+        div{background-color: darkseagreen;}
+        span{background-color: mediumpurple;}
+        li{background-color: peru;}
+
+        div,span,li{
+            width: 50%;
+            width: 200px;
+            height: 80px;
+            padding-top: 30px;
+            text-align: center;
+            display: inline;
+            /*display -> 
+            block (cada item em uma linha)
+            inline (na mesma linha)
+            inline-block (na mesma linha mas considera a altura e largura)
+            */
+        }
+
     </style>
 </head>
 
