--- a/secao14/css/margin.html
+++ b/secao14/css/margin.html
@@ -28,6 +28,7 @@
         }
 
         /* 
+        Margem collapse é quando as margens se sobressaem 
             float: left / right
             position: absolute
             display: inline-block
