--- a/secao14/css/heranca.html
+++ b/secao14/css/heranca.html
@@ -5,12 +5,21 @@
     <meta charset="UTF-8">
     <title>Herança</title>
     <style>
-        /* ... */
+        body{
+            font-family: cursive;
+            font-size: 40px;
+            border: solid 3px rgb(197, 181, 91);
+        }
+        div{
+            border: inherit;
+            /*inherit = herança, ou herdar */
+            padding: inherit;
+        }
     </style>
 </head>
 
 <body>
-    <h1>Herança</h1>
+    <h1 style="background-color:lightskyblue;">Herança</h1>
     <div>Estou herdando</div>
 </body>
 
