--- a/secao14/css/cores.html
+++ b/secao14/css/cores.html
@@ -11,11 +11,50 @@
             https://coolors.co/
             http://paletton.com/
         */
+        .c1 {
+            background-color: red;
+        }
+
+        .c2 {                   /*R G B*/
+            background-color: #f67809;
+        }
+        
+        .c3 {
+            background-color: #ABC;
+           
+        }
+
+        .c4 {                /*  R G B TRANSPARENCIA*/ 
+            background-color: #EDC91280
+        }
+        .c5 {                      /*  R G B TRANSPARENCIA*/ 
+            background-color: rgba(184, 72, 184, 0.502)
+        }
+        .c6 {                /*  R G B TRANSPARENCIA*/ 
+            background-color: rgb(97, 177, 128)
+        }
+        .c7 {                /*  R G B TRANSPARENCIA*/ 
+            background-color: hsla(244, 76%, 56%)
+        }
+        .c8 {                /*  R G B TRANSPARENCIA*/ 
+            background-color: hsla(184, 89%, 47%, 0.726)
+        }
+        div{
+            height: 150px;
+            width: 150px;
+        }
     </style>
 </head>
 
 <body>
-
+    <div class="c1"></div>
+    <div class="c2"></div>
+    <div class="c3"></div>
+    <div class="c4"></div>
+    <div class="c5"></div>
+    <div class="c6"></div>
+    <div class="c7"></div>
+    <div class="c8"></div>
 </body>
 
 </html>
