--- a/secao14/css/float.html
+++ b/secao14/css/float.html
@@ -11,18 +11,39 @@
 
         .c1 {
             background-color: red;
+            float: right;
         }
 
         .c2 {
             background-color: green;
+            clear: right;
+            float: left;
+            /*
+            CLEAR: limpa o float que veio antes dele deixando espaço em branco
+            clear:both limpa todos os floats
+            */
         }
         
         .c3 {
             background-color: blue;
+            clear: left;
+            float: right;
         }
 
         .c4 {
             background-color: orange;
+            clear: right;
+            float: left;
+        }
+        div{
+            height: 150px;
+            width: 150px;
+            
+            /*
+            float: right, left
+            primeiro a ser posto fica mais a posição (direita, esquerda), pois é o primeiro
+            */
+
         }
     </style>
 </head>
