--- a/secao14/css/overflow.html
+++ b/secao14/css/overflow.html
@@ -9,6 +9,14 @@
             height: 100px;
             width: 260px;
             border: solid 3px;
+            overflow: scroll;
+            /*
+            overflow:
+            hidden (somente o que esta na div/borda aparece o restante é apagado)
+            scroll: barra de rolagem para poder ver todos o conteudo
+            scroll x ou y: barra de rolagem para cima/baixo e para aos lados
+            
+            */
         }
     </style>
 </head>
