--- a/secao14/css/tamanhoBox.html
+++ b/secao14/css/tamanhoBox.html
@@ -6,6 +6,21 @@
     <style>
         body {
             font-size: 45px;
+            margin: 0;
+        }
+        div{
+            background-color: cornflowerblue;
+            width: 100%;
+            height: 300px;
+            padding: 100px;
+            border: solid 20px;
+            box-sizing: border-box;
+            /*
+            -largura e altura são inseridas no CONTEUDO
+            -em BOX-SIZING: CONTENT-BOX(somente o conteudo considerado)
+            BORDER-BOX(todos os itens de dentro da borda, padding... será inserida no tamanho)
+
+            */
         }
     </style>
 </head>
