--- a/secao14/css/texto.html
+++ b/secao14/css/texto.html
@@ -10,11 +10,51 @@
         * {
             margin: 0;
         }
+        html{
+            font-size: 30px;
+        }
 
         body {
             display: flex;
             flex-direction: column;
             align-items: center;
+        }
+        p{
+            /*padrões*/
+            font-size: 1em;
+            font-size: 100%;
+            font-size: 16px; 
+            /*absolutas*/  
+            font-size: 100px; /*pixel é relativo*/
+            font-size: 72pt; /*pontos*/
+            font-size: lin;/*polegadas*/
+            /*relativas*/
+            font-size: 2.2em;
+            font-size: 2.2rem;
+
+            font-family: monospace;
+            font-family: Georgia,serif;
+            font-family: Verdana,sans-serif;
+            font-family: 'Indie Flower',cursive;
+
+            font-weight: 200;
+            font-style: italic;
+            text-transform: uppercase; /*letras maisculas, minusculas*/
+            word-spacing: 10px; /*espaço entre palavras*/
+            letter-spacing: 20px;/*espaços entre letras*/
+            line-height: 80px; /**espaço entre linhas*/
+            text-align: center;/**alinhamentos*/
+        }
+        .botao{
+            font-size: 28px;
+            text-decoration: none;
+            padding: 10px 30px;
+            border-radius: 25px;
+        }
+        .destaque{
+            color: #fff;
+            background-color: lightcoral;
+            box-shadow: 2px 2px 1px 1px ;
         }
     </style>
 </head>
