--- a/secao14/css/unidades1.html
+++ b/secao14/css/unidades1.html
@@ -5,7 +5,38 @@
     <meta charset="UTF-8">
     <title>Unidades #01</title>
     <style>
-        /* ... */
+        /* 
+        UNIDADES
+
+        ABSOLUTAS (px, cm, mm)
+
+        VIEWSPORT-relativa(vh,vw,vmin,vmax)
+
+            raiz/pai
+        FONT(rem,em)
+       
+        */
+        .unidades-absolutas{
+            position: absolute;
+            font-size: 40px;
+            padding: 20px;
+            border: dashed 5px #222;
+            width: 4cm;
+            height: 20mm;
+            top: 150px;
+            left: 200px;
+        }
+        .unidades-relativas{
+            position: absolute;
+            font-size: 4em;
+            padding:5%;
+            border: solid 1vw #222;
+            margin: .8%;
+            width: 20vw;
+            height: 15vh;
+            bottom: 5%;
+            right: 5%;
+        }
     </style>
 </head>
 
