--- a/secao14/css/texto.html
+++ b/secao14/css/texto.html
@@ -53,8 +53,13 @@
         }
         .destaque{
             color: #fff;
-            background-color: lightcoral;
-            box-shadow: 2px 2px 1px 1px ;
+            background-color: rgb(219, 86, 86);
+            box-shadow: 2px 2px 1px 1px #000;
+            /*adiciona um sombreado*/
+        }
+        .destaque:active{
+            /*tira o sombreado ao clica*/
+            box-shadow: none;
         }
     </style>
 </head>
