--- a/secao14/css/desafioMenu.html
+++ b/secao14/css/desafioMenu.html
@@ -7,7 +7,63 @@
     <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <style>
-        /* ... */
+        *{
+            color: seashell;
+            box-sizing: border-box;
+        }
+        body{
+            margin: 0;
+            background-color: lightgray;
+        }
+        .cabecalho{
+            background-color: #000;
+            font-size: 25px;
+            font-family: "Oswald";
+            width: 100%;
+            height: 80px;
+            box-sizing: content-box;
+            border-bottom: solid 5px skyblue;
+        }
+        .logo{
+            display: inline-block;
+            height: 80px;
+            padding: 15px;
+        }
+        .logo img{
+            height: 100%;
+        }
+        .menu-toggle{
+            float:right;
+            color: white;
+            background-color: #555;
+            border: solid 1px #777;
+            border-radius: 5px;
+            height: 40px;
+            padding: 10px 20px;
+            margin: 20px 15px;
+        }
+        .menu{
+            display: inline-block;
+            vertical-align: top;
+            height: 80px;
+            
+        }
+        .autenticacao{
+            float: right;
+        }
+        .botaoDestaque{
+            background-color: red;
+            border-radius:70px;
+            margin: 8px;
+            
+        }
+        li:hover, .autenticacao>a:hover{
+                background-color: skyblue;
+                color: #000;
+        }
+        a{
+            text-decoration: none;
+        }
     </style>
 </head>
 
@@ -18,7 +74,7 @@
                 <img src="http://files.cod3r.com.br/curso-web/logo.png" alt="Logo" />
             </a>
         </div>
-        <button class="menu-toggle">
+      <button class="menu-toggle">
             <i class="fa fa-lg fa-bars"></i>
         </button>
         <nav class="menu">
@@ -39,7 +95,7 @@
         </nav>
         <aside class="autenticacao">
             <a href="#login">Login</a>
-            <a href="#registar" class="botao destaque">Registrar</a>
+            <a href="#registar" class="botaoDestaque">Registrar</a>
         </aside>
     </header>
 
