--- a/secao14/css/mediaQuery.html
+++ b/secao14/css/mediaQuery.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <title>Media Query</title>
     <style>
+        /*RESPONSIVO
+        *se adequar a tela
+        */
         div {
             font-size: 40px;
             margin: 20px;
@@ -11,6 +14,16 @@
             background-color: coral;
             border: solid 5px;
             display: none;
+        }
+        @media(max-width:600px){
+            .muito-pequeno {display:block}
+        }
+                                    /*landscape = horizontal*/
+        @media(max-width: 1500px),(orientation:portrait){
+            .pequeno-retrato {display:block}
+        }   /*minimo e maximo ocorre algo*/
+        @media(min-width: 500px) and (max-width:1000px){
+            .intervalo {display: block;}
         }
     </style>
 </head>
