--- a/secao14/css/index.html
+++ b/secao14/css/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 <head>
     <meta charset="UTF-8">
     <title>Capítulo CSS</title>
@@ -12,7 +11,7 @@
         
         body {
             margin: 0;
-            font-family: 'Oswald', sans-serif;
+            font-family: 'Oswald';
             background-color: lightgray;
             height: 100%;
         }
