--- a/secao14/css/flexbox3.html
+++ b/secao14/css/flexbox3.html
@@ -6,7 +6,27 @@
     <title>Flexbox #03</title>
     <link rel="stylesheet" href="css/tag.css">
     <style>
-        /* ... */
+        div{
+            border:solid 5px dodgerblue;
+            font-size: 40px;
+        }
+        .flex-container div{box-sizing: border-box;}
+        .flex-container{
+            display: flex;
+            flex-direction: row;
+
+        }
+        .flex-container div{
+            flex-basis: 100px;/*largura do elemento SENTIDO MAIN AXIS*/
+            width: 200px;
+        }
+        .flex-container div:nth-child(4){
+            /*propriedade que define os: grow shrink basis*/
+            flex: 3 6 100px;
+        }
+        .flex-container{
+            width: 300px;
+        }
     </style>
 </head>
 
