--- a/secao14/css/flexbox2.html
+++ b/secao14/css/flexbox2.html
@@ -6,7 +6,44 @@
     <title>Flexbox #02</title>
     <link rel="stylesheet" href="css/tag.css">
     <style>
-        /* ... */
+        div{
+            border: solid 5px dodgerblue;
+            font-size: 40px;
+        }
+        .flex-container div{
+            box-sizing: border-box;
+            width: 100px;
+            flex-grow:1 ;
+            /*se o espaço todo for de ex 1000 e somente 4 elementos utilizam 600, os 400
+            que sobram caso todos tenham o mesmo peso (1) sera adicionada +100 para cada, caso 
+            um tenha um peso a mais ele receberá o dobro do espaço e o restante será divido para o restante
+            */
+        }
+        .flex-container{
+            display: flex;
+            height: 300px;
+            width: 600px;
+        }/*adicionado estilo ao 3° filho*/
+        .flex-container div:nth-child(3){
+            background-color: coral;
+            order: 1; /*manipula a ordem dos elementos, individualmente*/
+            order: -1; /*fica em primeiro lugar*/
+            /*muda o local */
+            align-self: center;
+            align-self: flex-end;
+            align-self: flex-start;
+            align-self: stretch;
+        }
+        .flex-container div:nth-child(2){
+            flex-grow: 2;
+        }
+        .flex-container{
+            width: 300px;
+            flex-shrink:1 ; /*Mesma coisa que o GROW mas ele encolhe os elementos*/
+        }
+        .flex-container div:nth-child(3){
+            flex-shrink: 2;
+        }
     </style>
 </head>
 
