--- a/secao14/css/cssgrid1.html
+++ b/secao14/css/cssgrid1.html
@@ -22,6 +22,42 @@
             border: solid 5px dodgerblue;
             background: #fff;
         }
+        body{
+            /*GRID: trabalha com duas dimensões*/
+            display: grid;
+            grid-template-columns: 50% 50%; /*assume duas colunas*/
+            grid-template-columns:repeat(4,8.33% 8.33% 8.33%);
+            grid-template-columns:repeat(4,8.33%);
+            /* grid-template-columns: minmax(100px,1000px); 
+            minimo e maximo*/
+            grid-template-columns: 200px 20% 1fr;
+            grid-template-columns: 3fr 6fr 3fr; /*fr = fraguimentos*/
+
+            /*LINHAS*/
+            grid-template-rows: 50% 25% 12.5% 12.5%;
+            grid-template-rows: 100px 1fr;
+            grid-template-rows: 100px auto;
+        }
+        .d8{
+            grid-column-start: 2;
+            grid-column-end: 4;
+            grid-column-end: span 2;
+            grid-row-start: 3;
+            grid-row-end:5;
+        }
+        .d10,.d11{
+            /*podem se sobrepor*/
+            grid-column-start: 1;
+            grid-column-end: 3;
+
+            grid-row-start: 5;
+            grid-row-end: span 1;
+        }
+        .d10{
+            z-index: 10;/*profundidade
+            quanto maior o z-index maior a preferencia de ficar a frente 
+            */
+        }
     </style>
 </head>
 
