--- a/secao14/css/cssgrid2.html
+++ b/secao14/css/cssgrid2.html
@@ -20,6 +20,28 @@
             border: solid 5px dodgerblue;
             background: #fff;
         }
+        body{
+            display: grid;
+            grid-template-columns: /*entre [] é o nome que criou para as linhas*/
+            [inicio]1fr 
+            [meio1] 1fr 
+            [meio2] 1fr 
+            [fim];
+            grid-template-rows: repeat(3, 1fr);
+            /*espaços*/
+            column-gap: 20px;
+            row-gap: 20px;
+               /*linhas colunas*/
+            gap: 30px    30px;
+        }
+        .d1{
+            grid-column-start: meio2;
+            grid-column-end: fim;
+            grid-column: meio1 / fim;
+            grid-row: 1/span 2;
+            /*row-start  column-start  row-end   column-end*/
+            grid-area: 1 / meio1/span 3 / fim;
+        }
     </style>
 </head>
 
