--- a/secao14/css/flexboxMenu.html
+++ b/secao14/css/flexboxMenu.html
@@ -51,9 +51,21 @@
             background: #f50a31;
             color: #fff;
         }
-        /* ==================== */
-        /* Solução com Flex Box */
-        /* ==================== */
+        .cabecalho{
+            display: flex;
+            align-items: center;
+            justify-content: space-between;/*espaço entre os elementos*/
+
+        }
+        .menu{
+            flex-grow: 10;
+        }
+        .menu ul{
+            display: flex;
+        }
+        .menu li{
+            margin: 10px;
+        }
     </style>
 </head>
 
