--- a/secao15/selecionandoElementos1.html
+++ b/secao15/selecionandoElementos1.html
@@ -9,8 +9,26 @@
     <div id="primeiro">#primeiro</div>
     <div>Segundo</div>
     <div class="terceiro ultimo">.terceiro .ultimo</div>
-    <script>              
-        // ...
+    <script>            
+        //pego o elemento pelo id, somente o nome precisa ser identificado  
+        document.getElementById('primeiro').classList.add('destaque');
+                                                    //adicionado class destaque
+        //pega todas as tag DIV
+        const divs = document.getElementsByTagName('div');
+
+        //html collections em array
+
+        //transformou em array, percorreu e removeu as classe destaque
+        Array.from(divs).forEach(e =>e.classList.remove('destaque'));
+        //segundo metodo
+        const divsArray = [...divs];
+        divsArray.forEach(e=>e.classList.add('destaque'));
+
+        //
+        const ultimosElementos = document.getElementsByClassName('ultimo');
+        for (let e of ultimosElementos){
+            e.classList.remove('destaque');
+        }
     </script>
 </body>
 </html>
