--- a/secao15/selecionandoElementos2.html
+++ b/secao15/selecionandoElementos2.html
@@ -10,7 +10,32 @@
     <div>Segundo</div>
     <div class="terceiro ultimo"><span wb-attrib>.terceiro .ultimo</span></div>
     <script>              
-        // ...
-    </script>
+        document.querySelector('#primeiro').classList.add('destaque');
+
+        const selecionar = seletor =>
+            document.querySelectorAll(seletor).forEach(e=>e.classList.add('destaque'));
+            //querySelectorAll retorna um NODE LIST
+        const deselecionar = seletor =>
+            document.querySelectorAll(seletor).forEach(e=>e.classList.remove('destaque'));
+
+        selecionar('div');
+        deselecionar('*');
+
+        selecionar('.terceiro.ultimo');
+        deselecionar('*');
+
+        selecionar(':not(#primeiro)');
+        deselecionar('*');
+
+        selecionar(':nth-child(1)');//pega primeiro filho
+        deselecionar('*');
+
+        selecionar('div:nth-of-type(1)');//pega primeiro elemento que seja div
+        deselecionar('*');
+
+        selecionar('[wb-attrib]');
+        deselecionar('*');
+
+   </script>
 </body>
 </html>
