--- a/secao15/acessandoAtributos2.html
+++ b/secao15/acessandoAtributos2.html
@@ -10,6 +10,7 @@
 <body class='conteudo exercicio'>
     <div>
         <label for="compras">Compras</label>
+        <!--atributos com DATA e hifen tam urgencia diferente-->
         <ul id="compras" destino='escritório' data-urgencia="5">
             <li>Café</li>
             <li>Água</li>
@@ -17,7 +18,17 @@
         </ul>
     </div>
     <script>
-        // ...
+        const lista = document.querySelector('div ul[destino="escritorio"]')
+        console.log('Elemento "ul"......')
+        console.log('childNodes', lista.childNodes)
+        console.log('destino', lista.id);
+        console.log('getAttribute', lista.getAttribute('destino'))
+        console.log('hasAttribute', lista.hasAttribute('destino'));
+        lista.setAttribute('destino', 'empresa');
+        lista.setAttribute('status', 'aberto');
+        lista.removeAttribute('destino') //remove
+        console.log(lista.dataset.urgencia)
+        lista.dataset.urgencia =4
     </script>
 </body>
 
