--- a/secao15/selecionandoElementos3.html
+++ b/secao15/selecionandoElementos3.html
@@ -31,7 +31,17 @@
         <button>Pesquisar</button>
     </form>
     <script>
-        // ...
+        //COMO SELECIONAR ELEMENTOS QUE TEM NAME
+
+        // console.log(document.);
+        console.log(document.forms);
+        console.log(document.forms[0]);
+        console.log(document.getElementsByName('pesquisa'));
+        console.log(document.pesquisa);
+        console.log(document.pesquisa.q);
+        document.pesquisa.q.value = 'nomeAlterado'; //altera nome do elemento
+        document.pesquisa.hl.value = 'en-us';
+        console.log(document.pesquisa.hl.selectedIndex);
     </script>
 </body>
 
