--- a/secao15/acessandoAtributos3.html
+++ b/secao15/acessandoAtributos3.html
@@ -16,7 +16,18 @@
         </ul>
     </div>
     <script>
-        // ...
+        //acessar atrib a partir da notação ponto
+        const lista = document.querySelector('#compras');
+
+        //Somente leitura não altera
+        console.log(lista.attributes)
+        console.log(lista.attributes.id)
+        console.log(lista.attributes[0])
+        console.log(lista.attributes.destino)
+        console.log(lista.attributes['data-urgencia'])
+
+
+        lista.attributes.destino = 'casa';//NÃO consegue alterar desse modo
     </script>
 </body>
 
