--- a/secao15/acessandoAtributos2.html
+++ b/secao15/acessandoAtributos2.html
@@ -18,17 +18,26 @@
         </ul>
     </div>
     <script>
+        //div quem tem ul com atributo destino e valor x
         const lista = document.querySelector('div ul[destino="escritorio"]')
         console.log('Elemento "ul"......')
         console.log('childNodes', lista.childNodes)
         console.log('destino', lista.id);
         console.log('getAttribute', lista.getAttribute('destino'))
-        console.log('hasAttribute', lista.hasAttribute('destino'));
+        console.log('hasAttribute', lista.hasAttribute('destino'));//se atrib existe sim ou não 
         lista.setAttribute('destino', 'empresa');
-        lista.setAttribute('status', 'aberto');
+        lista.setAttribute('status', 'aberto');//altera ou criar atributo
         lista.removeAttribute('destino') //remove
         console.log(lista.dataset.urgencia)
-        lista.dataset.urgencia =4
+        lista.dataset.urgencia =4 //altera valor
+        console.log(lista.getAttribute('data-urgencia'));
+
+        //atenção
+        const label = document.querySelector('label');
+        console.log(label.for)//nulo
+        console.log(label.htmlFor)//correto pois for é do html e preciso ser declarado
+        console.log(label.getAttribute('for'))
+
     </script>
 </body>
 
