--- a/secao15/modificandoHTML1.html
+++ b/secao15/modificandoHTML1.html
@@ -9,7 +9,32 @@
 
 <body class='conteudo exercicio'>
     <script>
-        // ...
+        const body = document.querySelector('body');
+
+        const div1 = document.createElement('div');
+        div1.classList.add('destaque')
+        div1.innerHTML = 'primeiro'
+
+        const div2 = document.createElement('div');
+        div2.setAttribute('teste', 'teste2')
+        div2.innerHTML = 'segundo'
+
+        const p = document.createElement('p')
+        p.innerHTML = 'terceiro'
+        const div3 = document.createElement('div');
+        div3.appendChild(p) //coloca no ultimo elemento do pai
+
+        body.appendChild(div1)
+        body.appendChild(div2)
+        body.appendChild(div3)
+
+        const texto = document.createTextNode('antes...')
+        div3.insertBefore(texto,div3.childNodes[0])
+//elemento que vai ser adicionado algo/elemento filho/e antes de qual elemento adicionar 
+
+        const div4 = div3.cloneNode(true) //clonado da div3 e seus filhos
+        body.appendChild(div4)
+        body.removeChild(div3)
     </script>
 </body>
 
