--- a/secao15/modificandoHTML2.html
+++ b/secao15/modificandoHTML2.html
@@ -12,7 +12,19 @@
         <p>Texto Inicial</p>
     </div>
     <script>
-        // ...
+        const div = document.querySelector('div')
+        div.innerHTML = 'texto alterado' //substitui tudo da div
+        // div.outerHTML = 'Texto altera div' //substiotui a div pelo texto
+        div.insertAdjacentHTML('beforebegin', '<p>Antes do Inicio </p>')
+        div.insertAdjacentHTML('afterbegin', '<p>Depois do Inicio </p>')
+        div.insertAdjacentHTML('beforeend', '<p>Antes do Fim </p>')
+        div.insertAdjacentHTML('afterend', '<p>Depois do fim </p>')
+
+        //somente texto, sem tags
+        console.log(div.innerText)
+        //com tags
+        console.log(div.innerHTML)
+
     </script>
 </body>
 
