--- a/secao15/trabalhandoComEventos2.html
+++ b/secao15/trabalhandoComEventos2.html
@@ -10,6 +10,19 @@
 <body class="conteudo exercicio">
     <div>Elemento</div>
     <script>
-        // ...
+        const item = document.querySelector('div')
+        item.style.position = 'absolute';
+
+        item.onmousemove = e =>{
+            const item = e.target
+            item.style.cursor = 'move'; //da opção de mover
+
+            if(e.buttons){ //se clicado é diferente de 0 e adai é vdd
+                item.style.top = `${e.clientY - (item.clientHeight / 2)}px`;
+                item.style.left = `${e.clientX - (item.clientWidth / 2)}px`
+                
+                //eixo y/eixo x do clique - altura/largura da div
+            }   
+        }
     </script>
 </body>
